Added usePresetSynth for quick demos

--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+		<!-- <link rel="icon" type="image/svg+xml" sizes="32x32" href="/Synth-2.svg" /> -->
+		<!-- <link rel="icon" type="image/png" sizes="32x32" href="/Synth-new.png" /> -->
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="/noun-synth-3-fixed.png"
+		/>
+		<!-- <link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="/noun-synth-4-fixed.png"
+		/> -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Synthy</title>
+		<title>Synthy - Polyphonic Synthesizer</title>
 	</head>
 	<body>
 		<div id="root"></div>
